--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,21 @@
     <modelVersion>4.0.0</modelVersion>
     <name>Bdd4J</name>
     <description>BDD(Behaviour Drivven Development) test runner for JUnit, inspired by Machine.Specifications</description>
-    <groupId>com.github.onliner10.bdd4J</groupId>
+    <groupId>com.github.onliner10</groupId>
     <artifactId>bdd4J</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
+    <url>https://github.com/onliner10/bdd4J</url>
+    <scm>
+        <url>http://github.com/onliner10/bdd4J</url>
+    </scm>
+
+    <developers>
+        <developer>
+            <name>Mateusz Urban</name>
+            <email>mateuszurban2@gmail.com</email>
+        </developer>
+    </developers>
 
     <licenses>
         <license>
@@ -36,7 +47,55 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>łŁł
+            </plugin>
+            <plugin>ł
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 
 </project>
