--- a/pom.xml
+++ b/pom.xml
@@ -69,9 +69,9 @@
                             <goal>jar</goal>
                         </goals>
                     </execution>
-                </executions>łŁł
+                </executions>
             </plugin>
-            <plugin>ł
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
                 <executions>
